--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "pro-backup",
-  "version": "1.2.1",
+  "version": "2.0.0",
   "description": "replace project files.",
   "keywords": [
     "project",
     "file"
   ],
-  "files": ["example", "index.js"],
+  "files": [
+    "example", 
+    "index.js",
+    "package.json",
+    "README.md"
+  ],
   "main": "index.js",
   "scripts": {
     "publish": "npm publish"
