--- a/example/package.json
+++ b/example/package.json
@@ -5,13 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:old": "pro-backup old && vite",
-    "dev:new": "pro-backup new && vite",
-    "dev:new2": "pro-backup new2 && vite",
+    "dev:shanghai": "pro-backup shanghai && vite",
+    "dev:hefei": "pro-backup hefei && vite",
+    "dev:nanjing": "pro-backup nanjing && vite",
+    "dev:suzhou": "pro-backup suzhou && vite",
+    "dev:hangzhou": "pro-backup hangzhou && vite",
+    "dev:wuhan": "pro-backup wuhan && vite",
     "build": "vite build",
-    "build:old": "pro-backup old && vite build",
-    "build:new": "pro-backup new && vite build",
-    "build:new2": "pro-backup new2 && vite build",
+    "build:shanghai": "pro-backup shanghai && vite build",
+    "build:hefei": "pro-backup hefei && vite build",
+    "build:nanjing": "pro-backup nanjing && vite build",
+    "build:suzhou": "pro-backup suzhou && vite build",
+    "build:hangzhou": "pro-backup hangzhou && vite build",
+    "build:wuhan": "pro-backup wuhan && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
