--- a/example/package.json
+++ b/example/package.json
@@ -5,19 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:shanghai": "pro-backup shanghai && vite",
-    "dev:hefei": "pro-backup hefei && vite",
-    "dev:nanjing": "pro-backup nanjing && vite",
-    "dev:suzhou": "pro-backup suzhou && vite",
-    "dev:hangzhou": "pro-backup hangzhou && vite",
-    "dev:wuhan": "pro-backup wuhan && vite",
+    "dev:main": "pro-backup main && vite",
+    "dev:yaohui": "pro-backup yaohui && vite",
+    "dev:goofo": "pro-backup goofo && vite",
+    "dev:tuio": "pro-backup tuio && vite",
+    "dev:goofo2": "pro-backup goofo2 && vite",
     "build": "vite build",
-    "build:shanghai": "pro-backup shanghai && vite build",
-    "build:hefei": "pro-backup hefei && vite build",
-    "build:nanjing": "pro-backup nanjing && vite build",
-    "build:suzhou": "pro-backup suzhou && vite build",
-    "build:hangzhou": "pro-backup hangzhou && vite build",
-    "build:wuhan": "pro-backup wuhan && vite build",
+    "build:main": "pro-backup main && vite build",
+    "build:yaohui": "pro-backup yaohui && vite build",
+    "build:goofo": "pro-backup goofo && vite build",
+    "build:tuio": "pro-backup tuio && vite build",
+    "build:goofo2": "pro-backup goofo2 && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
