--- a/example/package.json
+++ b/example/package.json
@@ -5,17 +5,17 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:main": "pro-backup main && vite",
-    "dev:yaohui": "pro-backup yaohui && vite",
-    "dev:goofo": "pro-backup goofo && vite",
-    "dev:tuio": "pro-backup tuio && vite",
-    "dev:goofo2": "pro-backup goofo2 && vite",
+    "dev:main": "pb main && vite",
+    "dev:yaohui": "pb yaohui && vite",
+    "dev:goofo": "pb goofo && vite",
+    "dev:tuio": "pb tuio && vite",
+    "dev:goofo2": "pb goofo2 && vite",
     "build": "vite build",
-    "build:main": "pro-backup main && vite build",
-    "build:yaohui": "pro-backup yaohui && vite build",
-    "build:goofo": "pro-backup goofo && vite build",
-    "build:tuio": "pro-backup tuio && vite build",
-    "build:goofo2": "pro-backup goofo2 && vite build",
+    "build:main": "pb main && vite build",
+    "build:yaohui": "pb yaohui && vite build",
+    "build:goofo": "pb goofo && vite build",
+    "build:tuio": "pb tuio && vite build",
+    "build:goofo2": "pb goofo2 && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
